--- a/dashboard/templates/home/map-google.html
+++ b/dashboard/templates/home/map-google.html
@@ -69,7 +69,7 @@
 
 	<!-- google-map Js -->
 	<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-	<script src="http://maps.google.com/maps/api/js?key=AIzaSyDsucrEdmswqYrw0f6ej3bf4M4suDeRgNA"></script>
+	<script src="http://maps.google.com/maps/api/js?key=API_KEY"></script>
 	<script src="/static/assets/js/plugins/gmaps.min.js"></script>
 	<script src="/static/assets/js/pages/google-maps.js"></script>
 
