Added code for ESP32.

--- a/dashboard/templates/home/index.html
+++ b/dashboard/templates/home/index.html
@@ -183,13 +183,12 @@
                 <div class="col-xl-6 col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <h6>Customer Satisfaction</h6>
-                            <span>It takes continuous effort to maintain high customer satisfaction levels Internal and external.</span>
-                            <div class="row d-flex justify-content-center align-items-center">
-                                <div class="col">
-                                    <div id="satisfaction-chart"></div>
-                                </div>
-                            </div>
+<!--  -->
+<!--  -->
+<!--  -->
+                            <h6>ESP32 Output</h6>
+                            <p>{{ latest_text }}</p>
+                            <!-- <span>It takes continuous effort to maintain high customer satisfaction levels Internal and external.</span> -->
                         </div>
                     </div>
                     <div class="card table-card">
