Edited json file to display necessary metrics for homepage dashboard.

--- a/dashboard/templates/home/bc_typography.html
+++ b/dashboard/templates/home/bc_typography.html
@@ -13,9 +13,8 @@
 			<!-- [ Main Content ] start -->
 			<div class="row mb-3">
 				<div class="col-md-8">
-					<h3>Typography</h3>
-					<p class="lead">Documentation and examples for Bootstrap typography, including global settings, headings, body text, lists, and more.</p>
-					<p class="f-w-500">Check out <a href="http://html.phoenixcoded.net/nextro-new/docs/index-bc-package.html#page-typography" target="_blank" class="badge bg-light-primary">Documentation</a></p>
+					<h3>Dictionary</h3>
+					<p class="lead">Documentation and examples for keyword definitions.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -23,11 +22,11 @@
 				<div class="col-sm-12">
 					<div class="card">
 						<div class="card-header">
-							<h5>Headings</h5>
-							<p><span class="badges">.h1</span> through .h6 classes are also available, for when you want to match the font styling of a heading but cannot use the associated HTML element.</p>
+							<h5>Definitions</h5>
+							<p>Empty data.</p>
 						</div>
 						<div class="card-body">
-							<h1>h1. Heading</h1>
+							<!-- <h1>h1. Heading</h1>
 							<div class="clearfix"></div>
 							<h2>h2. Heading</h2>
 							<div class="clearfix"></div>
@@ -37,11 +36,11 @@
 							<div class="clearfix"></div>
 							<h5>This is a H5</h5>
 							<div class="clearfix"></div>
-							<h6>This is a H6</h6>
+							<h6>This is a H6</h6> -->
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12">
+				<!-- <div class="col-sm-12">
 					<div class="card">
 						<div class="card-header">
 							<h5>Display Headings</h5>
@@ -55,7 +54,7 @@
 							<h1 class="display-6">Display 6</h1>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="col-md-6">
 					<div class="card">
 						<div class="card-header">
