--- a/dashboard/templates/includes/sidebar.html
+++ b/dashboard/templates/includes/sidebar.html
@@ -21,9 +21,9 @@
 						<span>UI Components</span>
 					</li>
 					<li class="pc-item">
-						<a href="/bc_typography.html" class="pc-link "><span class="pc-micon"><i class="material-icons-two-tone">business_center</i></span><span class="pc-mtext">Typography</span></a>
+						<a href="/bc_typography.html" class="pc-link "><span class="pc-micon"><i class="material-icons-two-tone">business_center</i></span><span class="pc-mtext">Dictionary</span></a>
 					</li>
-					<li class="pc-item">
+					<!-- <li class="pc-item">
 						<a href="/icon-feather.html" class="pc-link "><span class="pc-micon"><i class="material-icons-two-tone">history_edu</i></span><span class="pc-mtext">Icons</span></a>
 					</li>
 					<li class="pc-item pc-caption">
@@ -91,18 +91,9 @@
 							</li>
 						</ul>
 					</li>
-					<li class="pc-item"><a href="sample-page.html" class="pc-link "><span class="pc-micon"><i class="material-icons-two-tone">storefront</i></span><span class="pc-mtext">Sample page</span></a></li>
+					<li class="pc-item"><a href="sample-page.html" class="pc-link "><span class="pc-micon"><i class="material-icons-two-tone">storefront</i></span><span class="pc-mtext">Sample page</span></a></li> -->
 
 				</ul>
-				<div class="card text-center">
-					<div class="card-body">
-						<i class="feather icon-rocket f-40"></i>
-						<h6 class="mt-3">Need More?</h6>
-						<a href="https://appseed.us/product/django-dashboard-kit-pro"
-							target="_blank" class="btn btn-primary btn-sm text-white m-0">PRO Version</a> 
-						<p>For more features and components</p>
-					</div>
-				</div>
 			</div>
 		</div>
 	</nav>
